--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/react-leaflet": "^2.5.1",
+    "@zeit/next-sass": "^1.0.1",
     "isomorphic-unfetch": "3.0.0",
+    "leaflet": "^1.6.0",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.3",
+    "react-leaflet-universal": "^2.2.1",
+    "sass": "^1.26.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
