--- a/package.json
+++ b/package.json
@@ -8,21 +8,43 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.10",
+    "@turf/bezier-spline": "^6.0.3",
+    "@turf/helpers": "^6.1.4",
+    "@types/axios": "^0.14.0",
+    "@types/leaflet-rotatedmarker": "^0.2.1",
+    "@types/lodash": "^4.14.149",
+    "@types/material-ui": "^0.21.7",
     "@types/react-leaflet": "^2.5.1",
+    "@types/react-redux": "^7.1.7",
     "@zeit/next-sass": "^1.0.1",
+    "axios": "^0.19.2",
     "isomorphic-unfetch": "3.0.0",
     "leaflet": "^1.6.0",
+    "leaflet-rotatedmarker": "^0.2.0",
+    "lodash": "^4.17.15",
     "next": "latest",
+    "next-images": "^1.4.0",
+    "next-redux-wrapper": "^5.0.0",
     "react": "^16.12.0",
+    "react-dadata-suggestions": "^2.0.0",
     "react-dom": "^16.12.0",
+    "react-lazy-load-image-component": "^1.4.3",
     "react-leaflet": "^2.6.3",
     "react-leaflet-universal": "^2.2.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.26.3"
   },
   "devDependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/redux-logger": "^3.0.7",
+    "redux-logger": "^3.0.6",
     "typescript": "3.7.3"
   },
   "license": "ISC"
